# image_denoising

./: CMakeLists.txt  README.md  starter.sh
src/: gaussianBlur.cpp  gaussianBlur.hpp  kernel_methods.cpp  main.cpp  medianFilter.cpp  medianFilter.hpp  powerIteration.cpp  powerIteration.hpp  toolkit.cpp  utils.cpp  utils.hpp
src/app/: kernel_methods.cpp  powerIteration.cpp  toolkit.cpp  utils.cpp
src/app/entry_points/: add_noise.cpp  main.cpp
src/app/include/: toolkit.hpp  utils.hpp
src/apps/: add_noise.cpp  main.cpp
src/include/: base.hpp  kernel_methods.hpp  powerIteration.hpp  power_iteration.hpp  toolkit.hpp  utils.hpp
src/tests/: CMakeLists.txt  test_core.cpp
tests/: CMakeLists.txt  test_algorithm.cpp  test_noise_addition.cpp
